--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,18 @@
 {
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "devDependencies": {
+    "@types/node": "^20.6.3",
     "typescript": "^5.2.2"
-  }
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx tsc",
+    "start": "npx ts-node ./build/index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
