--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
-    "start": "npx ts-node ./build/index.js"
+    "start": "npx ts-node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
